--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@
                 <p><a href="#">Lorem ipsum dolor sit amet.</a></p>
             </div>
            
-           
-
-
 
 
 
 
     </div>
-    <P> @ 2021 Dog shelter | ALL rights reserved</P>
+    <div class=bottom>
+        <P> @ 2021 Dog shelter | ALL rights reserved</P>
+    </div>
  </div>
 </body>
 </html>
