--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <hr style="width: 80%;">
     <div class=bottom>
-        <P> @ 2021 Dog shelter | ALL rights reserved</P>
+        <P> &copy; 2021 Dog shelter | ALL rights reserved</P>
     </div>
  </div>
 </body>
