--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class=landing>
         <h1><strong>Dog</strong> Shelter</h1>
-        <img src="/leonardo-arantes-h9I2gizYLPs-unsplash-removebg-preview (1).png"  height="300" width="300">
+        <img src="./leonardo-arantes-h9I2gizYLPs-unsplash-removebg-preview (1).png"  height="300" width="300">
         <p><strong>HOME</strong></p>
         <p> ABOUT US</p>
         <P> CONTACT</P>
